--- a/instancia-vue.html
+++ b/instancia-vue.html
@@ -7,7 +7,12 @@
         <div id="app">
             {{ "João Paulo" }}
             <input type="text" v-model="variavel">{{variavel}}
+            <input type="text" v-model="variavel2">{{variavel2}}
+            <p>
+                {{parseInt(variavel) + parseInt(variavel2)}}
+            </p>
         </div>
+
          <!-- development version, includes helpful console warnings -->
         <script src="https://cdn.jsdelivr.net/npm/vue@2.5.17/dist/vue.js"></script>
         <script>
@@ -16,7 +21,8 @@
 
                 el: "#app",
                 data: {
-                    variavel : ''
+                    variavel : 3,
+                    variavel2 : 10
                 }
 
             });
