--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
             <div class="row">
                 <h3>Campeonato Brasileiro - Série A - 2018</h3>
             </div>
-            <input type="text" :value="gols" :id="gols+'id'"> {{gols}}
+            <input type="text" :value="gols" :id="gols+'id'" @input="pegarValor($event)"> {{gols}}
+            <button class="btn btn-primary" @click="showAlert">Fim de Jogo</button>
         </div>
 
          <!-- development version, includes helpful console warnings -->
@@ -25,6 +26,15 @@
                 el: "#app",
                 data: {
                     gols: '3'
+                },
+
+                methods : {
+                    showAlert(){
+                        alert('Fim de Jogo!');
+                    },
+                    pegarValor($event){
+                        console.log($event);
+                    }
                 }
 
             });
