--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <div class="row">
                 <h3>Campeonato Brasileiro - Série A - 2018</h3>
             </div>
-            <input type="text" :value="gols" :id="gols+'id'" @input="pegarValor($event)"> {{gols}}
+            <input type="text" :value="gols" :id="gols+'id'" v-model="gols"> {{gols}}
             <button class="btn btn-primary" @click="showAlert">Fim de Jogo</button>
         </div>
 
