--- a/index.html
+++ b/index.html
@@ -13,7 +13,11 @@
             <div class="row">
                 <h3>Campeonato Brasileiro - Série A - 2018</h3>
             </div>
-            <input type="text" :value="gols" :id="gols+'id'" v-model="gols"> {{gols}}
+            <div>
+                {{time.nome}}
+                <img :src="time.escudo" alt="">
+            </div>
+            <input type="text" :id="gols+'id'" v-model="gols"> {{gols}}
             <button class="btn btn-primary" @click="showAlert">Fim de Jogo</button>
         </div>
 
@@ -21,11 +25,23 @@
         <script src="https://cdn.jsdelivr.net/npm/vue@2.5.17/dist/vue.js"></script>
         <script>
 
+            class Time {
+
+                constructor(nome, escudo){
+
+                    this.nome = nome;
+                    this.escudo = escudo;
+
+                }
+
+            }
+
             new Vue({
 
                 el: "#app",
                 data: {
-                    gols: '3'
+                    gols: '3',
+                    time: new Time('América MG', 'assets/america_mg_60x60.png'),
                 },
 
                 methods : {
