Aula 9 - v-for - Listando vários times (fixed)

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                         new Time('Santos', 'assets/santos_60x60.png'),
                         new Time('Botafogo', 'assets/botafogo_60x60.png'),
                         new Time('Atlético-PR', 'assets/atletico-pr_60x60.png'),
-                        new Time('Corinthias', 'assets/corinthias_60x60.png'),
+                        new Time('Corinthians', 'assets/corinthians_60x60.png'),
                         new Time('Grêmio', 'assets/gremio_60x60.png'),
                         new Time('Fluminense', 'assets/fluminense_60x60.png'),
                         new Time('Bahia', 'assets/bahia_60x60.png'),
