Aula 10 - Gerando placar de jogo

--- a/index.html
+++ b/index.html
@@ -13,8 +13,18 @@
             <div class="row">
                 <h3>Campeonato Brasileiro - Série A - 2018</h3>
             </div>
+            <div class="row">
+                <div class="col-md-12">
+                    <button class="btn btn-primary" @click="criarNovoJogo">Novo Jogo</button>
+                </div>
+            </div>
             <div>
             </div>
+            <input type="text" class="form-control" v-model="novoJogo.casa.gols">
+            {{novoJogo.casa.time ? novoJogo.casa.time.nome : ''}}
+            <input type="text" class="form-control" v-model="novoJogo.fora.gols">
+            {{novoJogo.fora.time ? novoJogo.fora.time.nome : ''}}
+            <button class="btn btn-primary" @click="showAlert">Fim de Jogo</button>
             <table class="table table-striped">
                 <thead>
                     <tr>
@@ -38,8 +48,6 @@
                     </tr>
                 </tbody>
             </table>
-            <input type="text" :id="gols+'id'" v-model="gols"> {{gols}}
-            <button class="btn btn-primary" @click="showAlert">Fim de Jogo</button>
         </div>
 
          <!-- development version, includes helpful console warnings -->
@@ -89,7 +97,17 @@
                         new Time('América-MG', 'assets/america_mg_60x60.png'),
                         new Time('Paraná', 'assets/parana_60x60.png'),
                         
-                    ]
+                    ],
+                    novoJogo : {
+                        casa: {
+                            time : null,
+                            gols : 0
+                        },
+                        fora: {
+                            time : null,
+                            gols : 0
+                        }
+                    }
                 },
 
                 methods : {
@@ -98,6 +116,18 @@
                     },
                     pegarValor($event){
                         console.log($event);
+                    },
+                    criarNovoJogo(){
+
+                        var indiceCasa = Math.floor(Math.random() * 20);
+                        var indiceFora = Math.floor(Math.random() * 20);
+
+                        this.novoJogo.casa.time = this.times[indiceCasa];
+                        this.novoJogo.casa.gols = 0;
+                        this.novoJogo.fora.time = this.times[indiceFora];
+                        this.novoJogo.fora.gols = 0;
+                        console.log(this.novoJogo);
+
                     }
                 }
 
