Ordenação com múltiplas colunas

--- a/index.html
+++ b/index.html
@@ -43,12 +43,9 @@
                         <thead>
                             <tr>
                                 <th>Nome</th>
-                                <th>
-                                    <a href="#" @click.prevent="orientacao = orientacao == 'desc' ? 'asc':'desc'">Pontos</a>
+                                <th v-for="(coluna, indice) in ordem.colunas">
+                                    <a href="#" @click.prevent="ordenar(indice)">{{coluna | ucwords}}</a>
                                 </th>
-                                <th>GM</th>
-                                <th>GS</th>
-                                <th>Saldo</th>
                             </tr>
                         </thead>
                         <tbody>
@@ -60,7 +57,7 @@
                                 <td>{{time.pontos}}</td>
                                 <td>{{time.gm}}</td>
                                 <td>{{time.gs}}</td>
-                                <td>{{time | saldo}}</td>
+                                <td>{{time.saldo}}</td>
                             </tr>
                         </tbody>
                     </table>
@@ -105,6 +102,7 @@
                     this.pontos = 0;
                     this.gm = 0;
                     this.gs = 0;
+                    this.saldo = 0;
 
                 }
 
@@ -162,6 +160,7 @@
                     this.pontos += pontos;
                     this.gm += golsMarcados;
                     this.gs += golsSofridos;
+                    this.saldo += this.gm - this.gs;
 
                  }
 
@@ -174,7 +173,10 @@
                 el: "#app",
                 data: {
                     gols: '3',
-                    orientacao : 'desc',
+                    ordem : {
+                        colunas : ['pontos', 'gm', 'gs', 'saldo'],
+                        orientacao : ['desc', 'desc', 'asc', 'desc']
+                    },
                     times : [
                         new Time('palmeiras', 'assets/palmeiras_60x60.png'),
                         new Time('Internacional', 'assets/internacional_60x60.png'),
@@ -222,7 +224,8 @@
                     },
 
                     timesOrdenados(){
-                        return _.orderBy(this.times, 'pontos', this.orientacao);
+                        console.log('ordenou', this.ordem);
+                        return _.orderBy(this.times, this.ordem.colunas, this.ordem.orientacao);
                     }
 
                 },
@@ -257,6 +260,10 @@
                         timeCasa.fimJogo(timeAdversario, golsMarcados, golsSofridos);
                         this.visao = 'tabela';
 
+                    },
+
+                    ordenar(indice){
+                      this.$set(this.ordem.orientacao, indice, this.ordem.orientacao[indice] == 'desc' ? 'asc':'desc');
                     }
                 }, 
                 filters : {
