--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
                     </form>
                 </div>
                 <div class="col-md-12" v-show="visao === 'tabela'">
+                    <input type="text" class="form-control" v-model="busca">
                     <table class="table table-striped">
                         <thead>
                             <tr>
@@ -49,7 +50,7 @@
                             </tr>
                         </thead>
                         <tbody>
-                            <tr v-for="time in timesOrdenados">
+                            <tr v-for="time in timesFiltrados">
                                 <td>
                                     <img :src="time.escudo" alt="" class="escudo">
                                     {{time.nome | ucwords}}                           
@@ -173,6 +174,7 @@
                 el: "#app",
                 data: {
                     gols: '3',
+                    busca : '',
                     ordem : {
                         colunas : ['pontos', 'gm', 'gs', 'saldo'],
                         orientacao : ['desc', 'desc', 'asc', 'desc']
@@ -223,9 +225,14 @@
                         return this.times.slice(16, 20);
                     },
 
-                    timesOrdenados(){
+                    timesFiltrados(){
                         console.log('ordenou', this.ordem);
-                        return _.orderBy(this.times, this.ordem.colunas, this.ordem.orientacao);
+                        var times = _.orderBy(this.times, this.ordem.colunas, this.ordem.orientacao);
+                        var self = this;
+                        return _.filter(times, function(time){
+                            var busca = self.busca.toLowerCase();
+                            return time.nome.toLowerCase().indexOf(busca) >= 0;
+                        });
                     }
 
                 },
